schema/testdata/errors/array_fields_expression_type_mismatch.keel
model Thing {
    fields {
        texts Text[]
        numbers Number[]
    }

    actions {
        list listThings1() {
            //expect-error:32:34:AttributeExpressionError:cannot use operator '==' with types Text[] and Number[]
            @where(["science"] == thing.numbers)
        }

         list listThings2() {
            //expect-error:29:31:AttributeExpressionError:cannot use operator '==' with types Number[] and Text[]
            @where([10, 20] == thing.texts)
        }

        list listThings3() {
            //expect-error:34:36:AttributeExpressionError:cannot use operator '==' with types Number[] and Text[]
            @where(thing.numbers == ["science"])
        }

        list listThings4() {
            //expect-error:32:34:AttributeExpressionError:cannot use operator '==' with types Text[] and Number[]
            @where(thing.texts == thing.numbers)
        }

        list listThings5() {
            //expect-error:24:26:AttributeExpressionError:cannot use operator 'in' with types Number and Text[]
            @where(100 in thing.texts)
        }
    }
}

